app/css/app.styl
@font-face
  font-family "王漢宗細圓體"
  src url(/res/fonts/wt006.ttf)

*, h1, h2, h3, p
  font-family "王漢宗細圓體", "微軟正黑體", "sans-serif", "Arial"

html
  overflow-x hidden
  max-width 100%

#menu
  position fixed
  z-index 99
  width 100vw
  background-color rgba(255, 255, 255, 0.6)

#menu .ui.secondary.pointing.menu
  width 100%
  min-width 836px
  position absolute
  display inline
  
#logo
  display inline

#logo img
  height auto
  width 15rem
  box-shadow 0px 0px

#menu .right.menu
  margin-right 17rem

#book
  position relative
  height 100%
  max-width 100vw 

#page_1
  overflow-y visible

#page_2
  left 100vw
  height 100vh
  div
    box-shadow 0px 0px!important

#page_3
  left 200vw
  height auto

.grid
  height auto
  vertical-align middle

#page_2 .grid .row
  margin-top 0
  padding 0 0 0 0

#profile-container
  margin-top 10vh

#row-2
  position relative

#row-2 .column
  padding 0px
  vertical-align middle
  #row-2-1 .column
    padding 0px 1px 1px 1px
    vertical-align top
    .img
      cursor pointer
      border-top #FFF 7px solid
      transition opacity .3s ease-in-out
    .img:hover
      opacity 0.4
  #row-2-2 .column
    padding 1px 1px 0px 1px
    // vertical-align bottom
    .img
      cursor pointer
      border-bottom #FFF 7px solid
      transition opacity .4s ease-in-out
    .img:hover
      opacity 0.4

#row-1 .column
  padding 0px
  text-align center
  .two.wide.column
    cursor pointer
    transition background .4s ease-in-out
  .two.wide.column:hover
    background rgba(0, 0, 0, 0.07)
  p
    height 1.5rem
    line-height 1.5rem
    letter-spacing 1rem
    font-size 1.3rem
    font-weight bolder

#row-1 .column.two.wide
  padding 1px 1px 0px 1px
  text-align center

#row-3 .column
  padding 0px
  text-align center
  .two.wide.column
    cursor pointer
    transition background .4s ease-in-out
  .two.wide.column:hover
    background rgba(0, 0, 0, 0.07)
  p
    height 1.5rem
    line-height 1.5rem
    letter-spacing 1rem
    font-size 1.3rem
    font-weight bolder

#row-3 .column.two.wide
  padding 0px 1px 1px 1px
  text-align center

#profile-content
  position absolute
  display flex
  height 100%
  top 6px
  background-color rgba(255, 255, 255, 0)
  z-index -4
  overflow-y auto

#experience
  flex 5
  height auto
  max-height 100%
  margin auto 0
  padding-left 8%
  h2
    font-size 1.5rem
  h3
    line-height 1.5rem
    font-weight bold

#say
  flex 4
  line-height 1.5rem
  margin auto 0
  height auto
  width auto
  padding-left 7px
  padding-right 10px
  .sign
    margin-top 5%
    h2
      text-align right
      font-size 1.2rem
      img
        vertical-align -30px
        margin-right 10%
        max-width 30%

#cur-profile 
  position relative
  overflow-y hidden
  .name
    position absolute
    z-index 2
    left 4rem
    top 0px
    margin 5%
    font-size 3rem
    font-weight bolder
    letter-spacing 0.5rem
    color #FFF
    -webkit-writing-mode vertical-lr
  .office
    position absolute
    z-index 2
    left 0px
    top 0px
    margin 5%
    font-size 2rem
    font-weight bold
    letter-spacing 0.5rem
    color #FFF
    -webkit-writing-mode vertical-lr

#sideinfo
  position absolute
  background-color red
  height auto
  top 50%
  margin-top -16vw
  width 24vw
  z-index 101
  margin-left 0.5%

.info h1
  bottom 0px

img
  display inline
  // box-shadow 0px 0px 9px 0px rgba(20%,20%,40%,0.5)
  width 100%
  height 100%

//#row_1 .column img
//  margin-top 0%
//
//#row_1 .column
//  padding 3px
//  
//#row_2 .column img
//  margin-bottom 0%
//  
//#row_2 .column
//  padding 3px
//
//#row_1
//  bottom 45vh
//
//#row_2
//  top 55vh
//
//#row_2
//  display table
//  bottom 0px
//
//#row_1, #row_2
//  position absolute
//
//.name
//  position relative 
//  width 100%
//  height auto
//  text-align center
//
//.name-top
//  border-bottom #0000FF 5px solid
//  padding-bottom 5px
//
//.name-bottom
//  border-top #0000FF 5px solid
//  padding-top 5px

#fb
  right 20%

#github
  right 5%

#mask
  position absolute
  z-index 100
  width 100vw
  height 100vh
  background-color #000
  opacity 0

#contact
  width 90vw
  margin 0 auto

p#contact-sub
  margin-top 0

label h3 
  font-size 1.5em

.column.ih-item.square.effect6
  padding 0

#info
  position absolute
  width 100vw
  top 50%
  z-index 98

#info img
  width auto

.loading
  background transparent url(../res/images/loader-mini.gif) no-repeat 50% 50% !important
  


// vi:et:nowrap:sw=2:ts=2

